--- a/styles.css
+++ b/styles.css
@@ -116,15 +116,16 @@ footer {
 .nav-icons {
   position: fixed;      
   top: 10px;            
-  left: 1750px;           
+  right: 20px;           
   display: flex;
   gap: 30px;            
-  z-index: 1000;        
+  z-index: 1002;        
 }
 .nav-icons img {
   width: 60px;
   height: 60px;
   border-radius: 50%;   
+object-fit: cover;
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
