--- a/darbare.css
+++ b/darbare.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .about {
@@ -28,3 +29,54 @@ body {
   margin: 10px 0;
   line-height: 1.6;
 }
+footer {
+  margin-top: 40px;
+  font-size: 0.85rem;
+  color: var(--text-light);
+}
+.logo {
+    position: fixed; 
+    top: 10px;       
+    left: 10px;     
+    width: 100px;     
+    z-index: 1000;
+
+    
+}
+.nav-icons {
+  position: fixed;      
+  top: 10px;            
+  right: 20px;           
+  display: flex;
+  gap: 30px;            
+  z-index: 1002;        
+}
+.nav-icons img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;   
+object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.nav-icons img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+
+.meunobala {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(10px);
+  padding: 35px 0;
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  z-index: 1000;
+}
+
