--- a/poshtiban.css
+++ b/poshtiban.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   height: 100vh;
-  background: linear-gradient(135deg, #6a11cb, #01ff01);
+  background: linear-gradient(135deg, #8e9b9c, #005eff);
   font-family: "Vazir", sans-serif;
   color: #fff;
   display: flex;
